--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pet Pals!</title>
-    <style></style>
+    <title>test deployment</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
-<body>
-    <div class="container">
-        <div class="jumbotron" style="text-align: center">
-            
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
-
-    
+<body> 
     <script src="static/app.js"></script>
 </body>
 
