--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,10 @@
     <title>test deployment</title>
 </head>
 
-<body> 
+<body>
+    <script src="https://d3js.org/d3.v7.min.js"></script> 
     <script src="static/app.js"></script>
+    
 </body>
 
 </html>
